--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -18,6 +18,11 @@
               Login
             </span>
           </a>
+          <a class="nav-link" tabindex="-1" aria-disabled="true" routerLink="/profil-user">
+            <span class="fa fa-sign-in">
+              Profil
+            </span>
+          </a>
         </li>
       </ul>
      
