--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -18,7 +18,7 @@
               Login
             </span>
           </a>
-          <a class="nav-link" tabindex="-1" aria-disabled="true" routerLink="/profil-user">
+          <a routerLinkActive="active" class="nav-link" tabindex="-1" aria-disabled="true" routerLink="/profil-user/id">
             <span class="fa fa-sign-in">
               Profil
             </span>
