--- a/src/app/profil-user/profil-user.component.scss
+++ b/src/app/profil-user/profil-user.component.scss
@@ -9,6 +9,10 @@
     }
 }
 
+.cliquezSurImage{
+  text-align: center;
+}
+
 nav{
     float: left;
     vertical-align: auto;
@@ -37,35 +41,32 @@ h1{
     text-align: center;
 }
 }
+label{
+  display: block;
+  width: 150px;
+  float: left;
+}
 
+legend{
+  color: aqua;
+  text-align: left;
+}
 
-/*.face-snap-card {
-    box-sizing: border-box;
-    width: 50%;
-    margin: 20px auto;
-    padding: 10px 30px;
-    box-shadow: lightgray 4px 4px 20px;
-    img {
-      width: 100%;
-    }
-    h2 {
-      margin-bottom: 0;
-    }
-    p {
-      font-weight: 300;
-      font-size: 16px;
-    }
-    
-  }
-  .snapped {
-        background-color: rgba(lightgreen, 0.4);
-        color: darkblue;
-        button {
-          box-shadow: lightgreen 3px 3px 7px;
-          color: darkred;
-          &:active {
-            box-shadow: lightgreen 0 0 5px;
-          }
-        }
-      }*/
+fieldset{
+  //display: block;
+  border-radius: 1%;
+  //box-sizing:;
+  border-color: black;
+  background-color: rgb(207, 165, 181);
+  //float: left;
+  margin-left: 30px;
   
+}
+
+.buttonEnregistrer{
+  margin-left: 30px;
+}
+
+.voirLeResultat{
+  margin-left: 30px;
+}
