--- a/src/app/profil-user/profil-user.component.html
+++ b/src/app/profil-user/profil-user.component.html
@@ -1,17 +1,18 @@
-<nav class="navigation">
+<!--<nav class="navigation">
     <ul>
         <li><a href="">HOME</a></li>
         <li><a href="">REGISTER</a></li>
         <li><a href="">PROFIL</a></li>
         <li><a href="">DOWLOADING</a></li>
     </ul>
-</nav>
-<header>
-    <h2>CREEZ UN PROFIL</h2>
+</nav>-->
+<header >
+    <h2 class="flow-text">CREEZ UN PROFIL</h2>
 </header>
 
 <section>
-    <div class="cadreImageProfil"><img src="https://cdn3.vectorstock.com/i/1000x1000/50/07/default-photo-profil-icon-flat-vector-31995007.jpg"></div>
+    <div class="cadreImageProfil"><img src="../assets/images/photoDeProfil.jpg"></div>
+        <p class="cliquezSurImage">Cliquez sur l'image pour la changer </p>
     <div class="cadreMonProfil"> 
         <h1>MON PROFIL</h1>
     </div>
@@ -19,39 +20,64 @@
 
 
     <form method="post" action="traitement.php">
+        <fieldset>
+            <legend> Informations de base </legend>
         <p>
             <label for="pseudo">Noms </label> :
             <input type="texte" placeholder="Comme dans lacte de naissance"/>
         </p>
-    </form>
-    <form method="post" action="traitement.php">
+    
+    
         <p>
             <label for="pseudo">Prénoms</label> : 
             <input type="text" placeholder="comme dans l'acte de naissance" />
         </p>
-     </form>
-     <form method="post" action="traitement.php">
+     
+     
         <p>
             <label for="pseudo">Date de naissance</label> : 
-            <input type="text" placeholder="suivant le format jj/MM/AAAA" />
+            <input type="date" placeholder="suivant le format jj/MM/AAAA" />
         </p>
-     </form>
-     <form method="post" action="traitement.php">
+     
         <p>
             <label for="pseudo">Contact(s)</label> : 
-            <input type="text" placeholder="Ex: +237 655 55 55 55" />
+            <input type="tel" placeholder="Ex: +237 655 55 55 55" />
         </p>
-     </form>
      
-     <form method="post" action="traitement.php">
         <p>
             <label for="pseudo">E-mail</label> : 
             <input type="text" name="pseudo" id="pseudo" placeholder="adresseemail@gmail.com"/>
         </p>
-     </form>
+    </fieldset>
 
-<div>
-    <button class="btn btn-primary btn-lg btn-block" type="submit" routerLink="profil-user">profil resultant</button>
+     <fieldset>
+        <legend> Potentiel </legend>
+        <p>
+            <label for="pseudo">Experience professionnelle :</label>
+            <textarea name="ameliorer" id="ameliorer" rows="5" cols="40" >
+           Bref résumé de votre experience professionnelle
+            </textarea>
+        </p>
+ 
+        <p>
+            <label for="pseudo">Diplômes :</label>
+            <textarea name="ameliorer" id="ameliorer" rows="5" cols="40" >
+           Listez vos diplômes en précisant le domaine et l'année d'obtension
+            </textarea>
+        </p>
+    
+        <p>
+            <label for="pseudo">Competenses :</label>
+            <textarea name="ameliorer" id="ameliorer" rows="5" cols="40" >
+           Citez vos competences en précisant le domaine
+            </textarea>
+        </p>
+    </fieldset><br/>
+    <input class="buttonEnregistrer" type="button" value="Enregistrer" />
+     </form><br/>
+
+<div class="voirLeResultat">
+    <button class="btn btn-primary btn-lg btn-block" type="submit" routerLink="profil-user">Voir le resultat</button>
 </div>
 
 <footer>
