--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -12,15 +12,46 @@
         </li>
       </ul>
       <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" tabindex="-1" aria-disabled="true" routerLink="/login">
-            <span class="fa fa-sign-in">
-              Login
+        <!-- <li class="nav-item dropdown" *ngIf="authService.currentUser$  | async as user;else loginButton">
+          <a class="nav-link dropdown-toggle" tabindex="-1" aria-disabled="true" routerLink="login" (click)="logout()">
+            <span class="fa fa-user-circle">
+              {{user.displayName}}
             </span>
+            <span class="fa fa-arrow-down ms-1"></span>
           </a>
+          <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
+            <li><a class="dropdown-item" href="#">Action</a></li>
+            <li><a class="dropdown-item" href="#">Another action</a></li>
+            <li><a class="dropdown-item" href="#">Something else here</a></li>
+          </ul>
         </li>
+-->
+        <ng-template #loginButton>
+          <li class="nav-item ">
+            <a class="nav-link "id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false" tabindex="-1" aria-disabled="true" routerLink="login">
+              <span class="fa fa-sign-in">
+                Login
+              </span>
+            </a>
+            
+          </li>
+        </ng-template> 
+
+        <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item dropdown" *ngIf="authService.currentUser$  | async as user;else loginButton">
+              <a class="nav-link dropdown-toggle"  id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <span class="fa fa-user-circle"> {{user.displayName}}</span>
+              </a>
+              <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
+                <li><a class="dropdown-item"  routerLink="settings" >Account</a></li>
+                <li><a class="dropdown-item" routerLink="login" (click)="logout()">Logout</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
       </ul>
-     
+
     </div>
   </div>
 </nav>
