--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -3,33 +3,61 @@
     <div class="row d-flex justify-content-center align-items-center h-100">
       <div class="col-12 col-md-8 col-lg-6 col-xl-5">
         <div class="card shadow-2-strong" style="border-radius: 1rem;">
-          <div class="card-body p-5 text-center">
+          <div class="card-body p-5 text-center" *ngIf="loginForm">
 
             <h3 class="mb-5">Register</h3>
-
-            <div class="form-outline mb-4">
-              <input type="text" id="typeEmailX-2" class="form-control form-control-lg" />
-              <label class="form-label" for="typeEmailX-2">Username</label>
-            </div>
-
-            <div class="form-outline mb-4">
-              <input type="email" id="typeEmailX-2" class="form-control form-control-lg" />
-              <label class="form-label" for="typeEmailX-2">Email</label>
-            </div>
-
-            <div class="form-outline mb-4">
-              <input type="password" id="typePasswordX-2" class="form-control form-control-lg" />
-              <label class="form-label" for="typePasswordX-2">Password</label>
-            </div>
-
-            <div class="container">
-              <div class="row gap-3">
-                <button class="btn btn-primary btn-lg btn-block" type="submit">Register</button>
-                <button class="btn btn-primary btn-lg btn-block" type="submit" routerLink="login">Login</button>
+            <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+              <div class="form-outline mb-4">
+                <input
+                  type="text"
+                  id="typeEmailX-2"
+                  placeholder="Enter Username"
+                  class="form-control form-control-lg"
+                  formControlName="username"
+                  autofocus
+                  required />
+                <label class="form-label" for="typeEmailX-2">Username</label>
               </div>
-            </div>
 
-            <hr class="my-4">
+              <div class="form-outline mb-4">
+                <div *ngIf="email?.invalid && (email?.dirty || email?.touched)"
+                class="alert alert-danger"> Email is Required</div>
+                <input
+                  type="email"
+                  id="typeEmailX-2"
+                  placeholder="Enter Email Adress"
+                  class="form-control form-control-lg"
+                  formControlName="email"
+                  required />
+                <label class="form-label" for="typeEmailX-2">Email</label>
+              </div>
+
+              <div class="form-outline mb-4">
+                <div *ngIf="password?.invalid && (password?.dirty || password?.touched)"
+                class="alert alert-danger"> Password is Required 3 letters min</div>
+                <input
+                type="password"
+                id="typePasswordX-2"
+                placeholder="Enter Password"
+                class="form-control form-control-lg"
+                formControlName="password"
+                required />
+                <label class="form-label" for="typePasswordX-2">Password</label>
+              </div>
+
+              <div class="container">
+                <div class="row gap-3">
+                  <button
+                      class="btn btn-primary btn-lg btn-block"
+                      type="submit"
+                      [disabled]="!loginForm.valid"
+                      >Register</button>
+                  <a class="btn btn-primary btn-lg btn-block" type="submit" (click)="onLogin()">Login</a>
+                </div>
+              </div>
+
+              <hr class="my-4">
+            </form>
 
 
           </div>
