--- a/src/app/components/GestionExperiences/edit-experience/edit-experience.component.html
+++ b/src/app/components/GestionExperiences/edit-experience/edit-experience.component.html
@@ -1,23 +1,20 @@
-<!--<p>experiences works!</p>-->
+<!--<p>edit-experience works!</p>-->
 <div class="container">
     <div class="card">
       <div class="card-body">
-        <h5 class="card-title">Experiences
-          <button class="btn btn-primary ms-2" (click)="onRegister()"><i class="fas fa-plus-circle"></i></button>
-          <span class="badge rounded-pill bg-success ms-4" *ngIf="experiences">{{experiences.length}}</span>
+        <h5 class="card-title">Edit Experience
         </h5>
       </div>
     </div>
-  
     <div class="card">
       <div class="card-body">
-        <form [formGroup]="experienceFormGroup">
+        <form [formGroup]="experienceFormGroup" *ngIf="experienceFormGroup" (ngSubmit)="onUpdateExperience()">
           <div class="mb-3">
             <input
             type="text"
             class="form-control"
             formControlName="poste"
-            placeholder="Enter your post ...">
+            placeholder="Enter Post ...">
           </div>
           <!-- <div *ngIf="title?.invalid && (title?.dirty || title?.touched)"
           class="alert alert-danger"> Title is Required</div> -->
@@ -26,7 +23,7 @@
             type="text"
             class="form-control"
             formControlName="entreprise"
-            placeholder="Enter company name ...">
+            placeholder="Enter Entreprise ...">
           </div>
           <div class="mb-3">
             <input
@@ -40,7 +37,7 @@
             type="text"
             class="form-control"
             formControlName="detail"
-            placeholder="Write Detail ...">
+            placeholder="Enter Details ...">
           </div>
           <div class="mb-3">
             <input
@@ -50,13 +47,9 @@
             placeholder="Enter Country ..."
             >
           </div>
-      <!-- <button type="submit" class="btn btn-success ">Save</button> -->
+          <button type="submit" class="btn btn-success ">Save</button>
   
         </form>
       </div>
     </div>
   </div>
-  <div class="container">
-    <app-experiences-list [experiencesInput]="experiences"></app-experiences-list>
-  </div>
-  
