--- a/src/app/components/GestionCertifications/certifications/certifications.component.html
+++ b/src/app/components/GestionCertifications/certifications/certifications.component.html
@@ -1,1 +1,52 @@
-<p>certifications works!</p>
+<!--<p>certifications works!</p>-->
+<div class="container">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Certifications
+          <button class="btn btn-primary ms-2" (click)="onRegister()"><i class="fas fa-plus-circle"></i></button>
+          <span class="badge rounded-pill bg-success ms-4" *ngIf="certifications">{{certifications.length}}</span>
+        </h5>
+      </div>
+    </div>
+  
+    <div class="card">
+      <div class="card-body">
+        <form [formGroup]="certificationFormGroup">
+          <div class="mb-3">
+            <input
+            type="text"
+            class="form-control"
+            formControlName="title"
+            placeholder="Enter Tiltle ...">
+          </div>
+          <!-- <div *ngIf="title?.invalid && (title?.dirty || title?.touched)"
+          class="alert alert-danger"> Title is Required</div> -->
+          <div class="mb-3">
+            <input
+            type="text"
+            class="form-control"
+            formControlName="organisme"
+            placeholder="Enter organism ...">
+          </div>
+           
+          <div class="mb-3">
+            <select
+            class="form-control"
+            formControlName="categorie"
+            placeholder="Category ..."
+            >
+              <option value="Web Developer">Web Developer</option>
+              <option value="Mobile Developer">Mobile Developer</option>
+  
+            </select>
+          </div>
+      <!-- <button type="submit" class="btn btn-success ">Save</button> -->
+  
+        </form>
+      </div>
+    </div>
+  </div>
+  <div class="container">
+    <app-certifications-list [certificationsInput]="certifications"></app-certifications-list>
+  </div>
+  
