--- a/src/app/components/GestionLangages/edit-langage/edit-langage.component.html
+++ b/src/app/components/GestionLangages/edit-langage/edit-langage.component.html
@@ -1,23 +1,20 @@
-<!--<p>langages works!</p>-->
+<!--<p>edit-langage works!</p>-->
 <div class="container">
     <div class="card">
       <div class="card-body">
-        <h5 class="card-title">Langages
-          <button class="btn btn-primary ms-2" (click)="onRegister()"><i class="fas fa-plus-circle"></i></button>
-          <span class="badge rounded-pill bg-success ms-4" *ngIf="langages">{{langages.length}}</span>
+        <h5 class="card-title">Edit Langage
         </h5>
       </div>
     </div>
-  
     <div class="card">
       <div class="card-body">
-        <form [formGroup]="langagesFormGroup">
+        <form [formGroup]="langageFormGroup" *ngIf="langageFormGroup" (ngSubmit)="onUpdateLangage()">
           <div class="mb-3">
             <input
             type="text"
             class="form-control"
             formControlName="nom"
-            placeholder="Enter Level ...">
+            placeholder="Enter Langage ...">
           </div>
           <!-- <div *ngIf="title?.invalid && (title?.dirty || title?.touched)"
           class="alert alert-danger"> Title is Required</div> -->
@@ -29,13 +26,10 @@
             formControlName="level"
             placeholder="Enter Level ...">
           </div>
-      <!-- <button type="submit" class="btn btn-success ">Save</button> -->
+          
+          <button type="submit" class="btn btn-success ">Save</button>
   
         </form>
       </div>
     </div>
   </div>
-  <div class="container">
-    <app-langages-list [langagesInput]="langages"></app-langages-list>
-  </div>
-  
