--- a/src/app/components/GestionLiens/edit-lien/edit-lien.component.html
+++ b/src/app/components/GestionLiens/edit-lien/edit-lien.component.html
@@ -1,17 +1,14 @@
-<!--<p>liens works!</p>-->
+<!--<p>edit-lien works!</p>-->
 <div class="container">
     <div class="card">
       <div class="card-body">
-        <h5 class="card-title">Liens
-          <button class="btn btn-primary ms-2" (click)="onRegister()"><i class="fas fa-plus-circle"></i></button>
-          <span class="badge rounded-pill bg-success ms-4" *ngIf="liens">{{liens.length}}</span>
+        <h5 class="card-title">Edit Lien
         </h5>
       </div>
     </div>
-  
     <div class="card">
       <div class="card-body">
-        <form [formGroup]="liensFormGroup">
+        <form [formGroup]="lienFormGroup" *ngIf="lienFormGroup" (ngSubmit)="onUpdateLien()">
           <div class="mb-3">
             <input
             type="text"
@@ -26,16 +23,12 @@
             type="text"
             class="form-control"
             formControlName="url"
-            placeholder="Enter url ...">
+            placeholder="Enter Url ...">
           </div>
-           
-      <!-- <button type="submit" class="btn btn-success ">Save</button> -->
+          
+          <button type="submit" class="btn btn-success ">Save</button>
   
         </form>
       </div>
     </div>
   </div>
-  <div class="container">
-    <app-liens-list [liensInput]="liens"></app-liens-list>
-  </div>
-  
