--- a/src/app/components/GestionLiens/liens-list/liens-list.component.html
+++ b/src/app/components/GestionLiens/liens-list/liens-list.component.html
@@ -11,8 +11,7 @@
           <tr *ngFor="let item of liensInput" >
             <td>{{item.id}}</td>
             <td>{{item.title}}</td>
-            <td>{{item.urll}}</td>
-             
+            <td>{{item.url}}</td>
             <td>
               <button
                 (click)="onDelete(item)"
