--- a/src/app/components/GestionFormations/formations-list/formations-list.component.html
+++ b/src/app/components/GestionFormations/formations-list/formations-list.component.html
@@ -6,7 +6,7 @@
           <th>ID</th>
           <th>DIPLOME</th>
           <th>ECOLE</th>
-          <th>DATE</th>
+          <th>PERIODE</th>
           <th>Categorie</th>
       </thead>
       <tbody>
@@ -14,7 +14,7 @@
           <td>{{item.id}}</td>
           <td>{{item.diplome}}</td>
           <td>{{item.ecole}}</td>
-          <td>{{item.date}}</td>
+          <td>{{item.periode}}</td>
           <td>{{item.categorie}}</td>
           <td>
             <button
