CRUD sur les infos(suite)

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -4,11 +4,18 @@
 <!-- <ion-app>
   <ion-router-outlet></ion-router-outlet>
 </ion-app> -->
+<ion-header>
+  <ion-toolbar>
+    <ion-title>WRITE YOUR CV</ion-title>
+  </ion-toolbar>
+</ion-header>
+
+
 <ion-split-pane contentId="main-content">
   <ion-menu contentId="main-content" type="overlay">
     <ion-content>
       <ion-list class="ion-text-center main-header">
-        <div align="center">
+        <div align="center"> 
           <ion-avatar>
             <img src="assets/shapes.svg" routerLink="/profile" />
           </ion-avatar>
